chore: fix the spacing in Movie Details Page

--- a/src/containers/HomeTemplate/MovieDetailsPage/style.scss
+++ b/src/containers/HomeTemplate/MovieDetailsPage/style.scss
@@ -74,7 +74,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
+  padding: 15px 100px;
   font-size: 13px;
   background: var(--gray);
 
